--- a/app/src/main/res/layout/activity_register2patient.xml
+++ b/app/src/main/res/layout/activity_register2patient.xml
@@ -1,11 +1,10 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical"
-    tools:context="com.example.idz.carehack.register2patient"
+    tools:context="com.example.idz.carehack.PatientRegistrationActivity"
     android:background="#1d97f9">
     <TextView
         android:id="@+id/text1"
@@ -27,22 +26,24 @@
         android:layout_height="wrap_content"
         android:ems="10"
         android:inputType="textPersonName"
-        android:hint="  Username"
+        android:hint="@string/username_prompt"
         android:layout_gravity="center"
         android:layout_marginTop="20dp"
         android:textColorHint="#b9d1d4"
-        android:backgroundTint="#fff"/>
+        android:backgroundTint="#fff"
+        android:importantForAutofill="no" />
     <EditText
         android:id="@+id/pwd"
         android:layout_width="300dp"
         android:layout_height="wrap_content"
         android:ems="10"
         android:inputType="textPassword"
-        android:hint="  Password"
+        android:hint="@string/password_prompt"
         android:layout_gravity="center"
         android:layout_marginTop="20dp"
         android:textColorHint="#b9d1d4"
-        android:backgroundTint="#fff"/>
+        android:backgroundTint="#fff"
+        android:importantForAutofill="no" />
 
 
     <Spinner
@@ -60,11 +61,12 @@
         android:layout_height="wrap_content"
         android:ems="10"
         android:inputType="numberDecimal"
-        android:hint="  Age"
+        android:hint="@string/age_prompt"
         android:layout_gravity="center"
         android:layout_marginTop="20dp"
         android:textColorHint="#b9d1d4"
-        android:backgroundTint="#fff"/>
+        android:backgroundTint="#fff"
+        android:importantForAutofill="no" />
 
     <EditText
         android:id="@+id/editText4"
@@ -76,7 +78,8 @@
         android:textColorHint="#b9d1d4"
         android:backgroundTint="#fff"
         android:inputType="textPostalAddress"
-        android:hint="Address"/>
+        android:hint="@string/address_prompt"
+        android:importantForAutofill="no" />
 
     <Spinner
         android:id="@+id/type"
@@ -96,8 +99,8 @@
         android:layout_gravity="center"
         android:layout_marginTop="20dp"
         android:background="@drawable/round"
-        android:text="Next"
-        android:textSize="10dp"
+        android:text="@string/next_label"
+        android:textSize="12sp"
         android:textStyle="bold" />
 
 </LinearLayout>
