--- a/app/src/main/res/layout/activity_otp.xml
+++ b/app/src/main/res/layout/activity_otp.xml
@@ -1,12 +1,11 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:orientation="vertical"
     android:background="#1d97f9"
     android:layout_height="match_parent"
-    tools:context="com.example.idz.carehack.otp">
+    tools:context="com.example.idz.carehack.OtpActivity">
     <EditText
         android:id="@+id/editText1"
         android:layout_width="300dp"
@@ -15,17 +14,18 @@
         android:layout_marginTop="120dp"
         android:backgroundTint="#fff"
         android:ems="10"
-        android:hint=" Phone"
+        android:hint="@string/phone_prompt"
         android:inputType="phone"
-        android:textColorHint="#b9d1d4" />
+        android:textColorHint="#b9d1d4"
+        android:importantForAutofill="no" />
     <Button
         android:id="@+id/button1"
         android:layout_width="80dp"
         android:layout_height="40dp"
         android:layout_gravity="center"
         android:background="@drawable/round"
-        android:text="Submit"
-        android:textSize="12dp"
+        android:text="@string/submit_label"
+        android:textSize="12sp"
         android:textStyle="bold"
         android:layout_marginTop="20dp"/>
     <EditText
@@ -34,21 +34,25 @@
         android:layout_height="wrap_content"
         android:ems="10"
         android:inputType="textPersonName"
-        android:hint="  Enter OTP"
+        android:hint="@string/enter_otp"
         android:visibility="gone"
+        tools:visibility="visible"
         android:layout_gravity="center"
         android:textColorHint="#b9d1d4"
-        android:backgroundTint="#fff"/>
+        android:backgroundTint="#fff"
+        android:importantForAutofill="no" />
+
     <Button
         android:id="@+id/otpbutton"
-        android:visibility="gone"
-        android:inputType="number"
         android:layout_width="80dp"
         android:layout_height="40dp"
         android:layout_gravity="center"
+        android:layout_marginTop="20dp"
         android:background="@drawable/round"
-        android:text="Submit"
-        android:textSize="10dp"
+        android:inputType="number"
+        android:text="@string/submit_label"
+        android:textSize="12sp"
         android:textStyle="bold"
-        android:layout_marginTop="20dp"/>
+        tools:visibility="visible"
+        android:visibility="gone" />
 </LinearLayout>
