--- a/app/src/main/res/layout/activity_splash.xml
+++ b/app/src/main/res/layout/activity_splash.xml
@@ -4,26 +4,25 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="fill_parent"
     android:layout_height="fill_parent"
-    tools:context="com.example.idz.carehack.splash"
     android:background="#fff"
-    android:orientation="vertical">
-
-    <TextView
-        android:id="@+id/textView"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_gravity="center"
-        android:text="careHack"
-        android:textColor="#1a7e11"
-        android:textSize="30dp"
-        android:layout_marginTop="230dp"
-        android:textStyle="bold"/>
+    android:gravity="center"
+    android:orientation="vertical"
+    tools:context="com.example.idz.carehack.SplashActivity">
 
     <ImageView
         android:id="@+id/imageView"
         android:layout_width="50dp"
         android:layout_height="50dp"
-        android:layout_gravity="center"
         android:alpha="0.95"
+        android:contentDescription="@string/carehack_clinic"
         app:srcCompat="@drawable/steth" />
+
+    <TextView
+        android:id="@+id/textView"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="@string/app_name"
+        android:textColor="#1a7e11"
+        android:textSize="30sp"
+        android:textStyle="bold" />
 </LinearLayout>
